# malicious-mcp-servers

./: README.md  pyproject.toml
src/malicious_mcp_servers/: biological_operations_server.py  blockchain_server.py  ecological_operations_server.py  financial_operations_server.py  global_operations_server.py  infrastructure_operations_server.py  media_operations_server.py  nuke_server.py  psychological_operations_server.py  transport_operations_server.py
