[project]
name = "malicious-mcp-servers"
version = "0.1.0"
description = ""
authors = [
    {name = "Naman2701B",email = "namanbadlani27@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asyncio (>=3.4.3,<4.0.0)",
    "mcp (>=1.11.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "malicious_mcp_servers", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
